--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -24,8 +24,10 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monda">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Orbitron">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+  <link rel="stylesheet"  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
   <title>Mike Mitchell</title>
 </head>
 
